11-grade/3_november/10-test/python.log
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 1в)
  File "<stdin>", line 1
    1в)
    ^
SyntaxError: invalid decimal literal
>>> 1: 3
  File "<stdin>", line 1
    1: 3
    ^
SyntaxError: illegal target for annotation
>>> 2: 2175
  File "<stdin>", line 1
    2: 2175
    ^
SyntaxError: illegal target for annotation
>>> 3: 81
  File "<stdin>", line 1
    3: 81
    ^
SyntaxError: illegal target for annotation
>>> 4: 20
  File "<stdin>", line 1
    4: 20
    ^
SyntaxError: illegal target for annotation
>>> 5: 293
  File "<stdin>", line 1
    5: 293
    ^
SyntaxError: illegal target for annotation
>>> 6: 37
  File "<stdin>", line 1
    6: 37
    ^
SyntaxError: illegal target for annotation
>>> 7: 2320
  File "<stdin>", line 1
    7: 2320
    ^
SyntaxError: illegal target for annotation
>>>
>>> 2в)
  File "<stdin>", line 1
    2в)
    ^
SyntaxError: invalid decimal literal
>>> 1: 150
  File "<stdin>", line 1
    1: 150
    ^
SyntaxError: illegal target for annotation
>>> 2: 87
  File "<stdin>", line 1
    2: 87
    ^
SyntaxError: illegal target for annotation
>>> 3: 66
  File "<stdin>", line 1
    3: 66
    ^
SyntaxError: illegal target for annotation
>>> 4: 134
  File "<stdin>", line 1
    4: 134
    ^
SyntaxError: illegal target for annotation
>>> 5: 172
  File "<stdin>", line 1
    5: 172
    ^
SyntaxError: illegal target for annotation
>>> 6: 44
  File "<stdin>", line 1
    6: 44
    ^
SyntaxError: illegal target for annotation
>>> 7: 560
  File "<stdin>", line 1
    7: 560
    ^
SyntaxError: illegal target for annotation
>>>
>>>
>>> 100000/15
6666.666666666667
>>> 3**10
59049
>>> 10**3
1000
>>> 33+33+1+1
68
>>> 26+7
33
>>> 13/8
1.625
>>> 7*80
560
>>> /8
  File "<stdin>", line 1
    /8
    ^
SyntaxError: invalid syntax
>>> 7*80/8
70.0
>>> 5*20
100
>>> 5*20/8
12.5
>>> 2+70+13
85
>>> 85*25
2125
>>> 2**13
8192
>>> 14/8
1.75
>>> 2**6
64
>>> 2**7
128
>>> 7*80
560
>>> 560/8
70.0
>>> 2**6
64
>>> 6*20
120
>>> 120/8
15.0
>>> 2+70+15
87
>>> 87*25
2175
>>> 5*10
50
>>> 2**17
131072
>>> 2**16
65536
>>> 17+50
67
>>> 67/8
8.375
>>> 9+13
22
>>> 1800/22
81.81818181818181
>>> 5+4+12
21
>>> 21/8
2.625
>>> 3
3
>>> 4*12
48
>>> 48+21
69
>>> 69/8
8.625
>>> 27*8*1024/1316
168.07294832826747
>>> 168/8
21.0
>>> 21-9
12
>>> 4*12
48
>>> 48/8
6.0
>>> 21+48
69
>>> 69/8
8.625
>>> 2500-190
2310
>>> 2500-1900
600
>>> 5+4+10+8
27
>>> 27/8
3.375
>>> 32/4
8.0
>>> 21-4
17
>>> 17*8
136
>>> 136/5
27.2
>>> 136/56
2.4285714285714284
>>> 136/6
22.666666666666668
>>> 2**15
32768
>>> 2**14
16384
>>> 15*2500
37500
>>> 37500/8
4687.5
>>> 4688*65536/1024/1024
293.0
>>> 279/14508
0.019230769230769232
>>> 14508/279
52.0
>>> 4*29
116
>>> 116/8
14.5
>>> 52-15
37
>>> 11*105
1155
>>> 1155*16384/1024
18480.0
>>> 2**11
2048
>>> 11*105
1155
>>> 1155*16384/8/2024
1168.695652173913
>>> 11*105
1155
>>> 1155*16384
18923520
>>> 18923520/8
2365440.0
>>> 18923520/1024
18480.0
>>> 18480/8
2310.0
>>> 18923520/1024/8
2310.0
>>> 11*105
1155
>>> /8
  File "<stdin>", line 1
    /8
    ^
SyntaxError: invalid syntax
>>> 11*105/8
144.375
>>> 145*16384
2375680
>>> 145*16384/1024
2320.0
>>>
KeyboardInterrupt
>>> 18923520
KeyboardInterrupt
>>>
KeyboardInterrupt
>>>
KeyboardInterrupt
>>>
KeyboardInterrupt
>>> 10**10
10000000000
>>> 10**10*5*5*5/100000
12500000.0
>>> 3*3*3*5*5
675
>>> 3*3*3*5*5*5
3375
>>> 3*3*3*5*5*5*5
16875
>>> 3*3*3*5*5*5*5*5
84375
>>> 10*10*10
1000
>>> 1000*3*3
9000
>>> 1000*3*3*3
27000
>>> 1000**3**3**3
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyboardInterrupt
>>> 1000*3*3*3*3
81000
>>> *3
  File "<stdin>", line 1
SyntaxError: can't use starred expression here
>>> 1000*3*3*3*3*3
243000
>>> 1000*5*5*5
125000
>>> 1000*5*5
25000
>>>